# sonarqube-mcp

./: .editorconfig  Dockerfile  LICENSE  MANIFEST.in  README.md  config.json.template  pyproject.toml
sonarqube_mcp/: __init__.py  __main__.py  server.py
sonarqube_mcp/sonarqube/: base.py
sonarqube_mcp/tools/: hotspot.py  issue.py  metric.py  permission.py  projects.py  qualitygate.py  qualityprofile.py  rule.py  source.py  system.py
