[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonarqube-mcp-server"
version = "0.1.0"
description = "Model Context Protocol Server for SonarQube"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "nggocnn", email = "nggocnn@users.noreply.github.com"}
]
keywords = ["sonarqube", "mcp", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.9.2",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/nggocnn/sonarqube-mcp"
Repository = "https://github.com/nggocnn/sonarqube-mcp"
Issues = "https://github.com/nggocnn/sonarqube-mcp/issues"

[project.scripts]
sonarqube-mcp = "sonarqube_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sonarqube_mcp*"]

[tool.setuptools.package-data]
sonarqube_mcp = ["py.typed"]